@@ -361,11 +361,15 @@ WIDGET_DEFAULT = {
         "show_rpm_maximum": True,
         "font_color_rpm_maximum": "#FFFFFF",
         "bkg_color_rpm_maximum": "#222222",
+        "show_torque": True,
+        "font_color_torque": "#FFFFFF",
+        "bkg_color_torque": "#222222",
         "column_index_oil": 1,
         "column_index_water": 2,
         "column_index_turbo": 3,
         "column_index_rpm": 4,
         "column_index_rpm_maximum": 5,
+        "column_index_torque": 6,
     },
     "flag": {
         "enable": True,
